Bug #17549
librbd::Operations: update notification failed: (2) No such file or directory
Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:
0%
Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
Seen in the copy.sh workunit test case:
Related issues
History
#1 Updated by Jason Dillaman over 6 years ago
- Status changed from In Progress to Fix Under Review
#2 Updated by Mykola Golub over 6 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Loïc Dachary over 6 years ago
- Copied to Backport #17556: jewel: librbd::Operations: update notification failed: (2) No such file or directory added
#4 Updated by Loïc Dachary over 6 years ago
- Status changed from Pending Backport to Resolved