librbd: ignore notify errors on missing image header

The rename op on v1 images fails since the header no longer exists. In
the general case, the removal of the header object will also fail the
watcher which has its own recovery path.

Fixes: http://tracker.ceph.com/issues/17549
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit fe3e2eafa087f81c9ab59f3fbc39600d6adaa9c2)